[project]
name = "goit-core-hw-07"
version = "0.1.0"
description = ""
authors = [
    {name = "Tania526-sudo",email = "starovoyt.tania@lll.kpi.ua"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "goit_core_hw_07", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
